--- a/site/blueprints/site.yml
+++ b/site/blueprints/site.yml
@@ -6,13 +6,23 @@ tabs:
     label: Content
     icon: text
     columns:
+      - width: 1
+        fields:
+          cases-practices:
+            type: headline
+            label: Cases & Practices
+            numbered: false
       - width: 1/2
         sections:
           cases: sections/cases
-          # practices: sections/practices
+      - width: 1/2
+        sections:
+          practices: sections/practices
       - width: 1/2
         sections:
           notes: sections/notes
+      - width: 1/2
+        sections:
           pages:
             type: pages
             create: default
@@ -21,46 +31,46 @@ tabs:
               - home
               - default
               - map
-      - width: 1
-        fields:
-          practice-head:
-            type: headline
-            label: Practice
-            numbered: false
-      - width: 1
-        sections:
-          drafts:
-            extends: sections/practices
-            headline: Drafts
-            status: draft
+      # - width: 1
+      #   fields:
+      #     practice-head:
+      #       type: headline
+      #       label: Practice
+      #       numbered: false
+      # - width: 1
+      #   sections:
+      #     practices:
+      #       extends: sections/practices
+      #       headline: Practices
+            # status: draft
 
-      - width: 1/4
-        sections:
-          bigpictures:
-            extends: sections/bigpictures
-            status: listed
-      - width: 1/4
-        sections:
-          peoples:
-            extends: sections/peoples
-            status: listed
+      # - width: 1/4
+      #   sections:
+      #     bigpictures:
+      #       extends: sections/bigpictures
+      #       status: listed
+      # - width: 1/4
+      #   sections:
+      #     peoples:
+      #       extends: sections/peoples
+      #       status: listed
 
-      - width: 1/4
-        sections:
-          scenarios:
-            extends: sections/scenarios
-            status: listed
+      # - width: 1/4
+      #   sections:
+      #     scenarios:
+      #       extends: sections/scenarios
+      #       status: listed
 
-      - width: 1/4
-        sections:
-          forms:
-            extends: sections/forms
-            status: listed
+      # - width: 1/4
+      #   sections:
+      #     forms:
+      #       extends: sections/forms
+      #       status: listed
 
       - width: 1
         sections:
           products:
-            extends: sections/orders
+            extends: sections/order
             headline: Orders
             # status: draft
 
