--- a/site/blueprints/site.yml
+++ b/site/blueprints/site.yml
@@ -18,61 +18,36 @@ tabs:
       - width: 1/2
         sections:
           practices: sections/practices
+      - width: 1/1
+        sections:
+          products:
+            type: pagetable
+            create: product
+            template:
+              - product
+            columns:
+              title;
+                label: Title
+                text: '{{page.title}}'
+              price:
+                label: Price
+                text: '{{ page.price }}'
+              tax:
+                label: Tax
+                text: '{{page.tax}}'
       - width: 1/2
         sections:
           notes: sections/notes
       - width: 1/2
         sections:
           pages:
-            type: pages
+            type: pagetable
             create: default
             template:
               - about
               - home
               - default
               - map
-      # - width: 1
-      #   fields:
-      #     practice-head:
-      #       type: headline
-      #       label: Practice
-      #       numbered: false
-      # - width: 1
-      #   sections:
-      #     practices:
-      #       extends: sections/practices
-      #       headline: Practices
-            # status: draft
-
-      # - width: 1/4
-      #   sections:
-      #     bigpictures:
-      #       extends: sections/bigpictures
-      #       status: listed
-      # - width: 1/4
-      #   sections:
-      #     peoples:
-      #       extends: sections/peoples
-      #       status: listed
-
-      # - width: 1/4
-      #   sections:
-      #     scenarios:
-      #       extends: sections/scenarios
-      #       status: listed
-
-      # - width: 1/4
-      #   sections:
-      #     forms:
-      #       extends: sections/forms
-      #       status: listed
-
-      - width: 1
-        sections:
-          products:
-            extends: sections/order
-            headline: Orders
-            # status: draft
 
   settings:
     label: Settings
