--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
     "require": {
         "php": ">=7.1.0",
         "getkirby/cms": "^3.0",
-        "sylvainjule/matomo": "^1.0"
+        "sylvainjule/matomo": "^1.0",
+        "sylvainjule/footnotes": "^1.0",
+        "sylvainjule/pagetable": "^1.0"
     },
     "config": {
         "optimize-autoloader": true
