--- a/site/blueprints/pages/practice.yml
+++ b/site/blueprints/pages/practice.yml
@@ -54,6 +54,12 @@ columns:
       columnToggle:
         label: Use columns for the text
         type: toggle
+        width: 1/2
+
+      whiteToggle:
+        label: White Background
+        type: toggle
+        width: 1/2
 
       description:
         type: textarea
